[tool.poetry]
name = "package-name"
version = "0.1.0"
description = ""
authors = ["Matsiuk Aliaksei <murryaa@gmai.com>"]
readme = "README.md"
packages = [{include = "package_name"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
